app/pages/calendar/calendar.css
/*.calendar-date {
    width: 100%;
    height: 100%;
    margin: 10px;
    font-weight: 600;
}

Image.other-profile-image {
    height: 50;
    width: 50;
    border-radius: none;
}

Image.other-cover-image {
    height: 130;
}

StackLayout.other-profile-image-container {
    border-color: #FFFFFF;
    border-width: 2;
    border-radius: 38;
}

StackLayout.profile-container {
    vertical-align: middle;
    horizontal-align: left;
    margin-left: 10;
}

Label.other-name {
    border-color: #000000;
    vertical-align: middle;
    margin-left: 5;
    font-size: 18;
    color: #FFFFFF;
}

StackLayout.bubble-from-me,
StackLayout.bubble-from-other{
    border-radius: 10;
    padding: 10;
    font-size: 14;
}

TextView.message-content {
    width: 100%;
    background-color: transparent;
}

Label.message-date {
    font-size: 11;
    font-style: italic;
    margin-left: 10;
    horizontal-align: left;
}


StackLayout.bubble-from-me {
    background-color: #85929E;
    margin-left: 40;
}


StackLayout.bubble-from-other {
    background-color: #D6DBDF;
    margin-right: 40;
}

GridLayout.bubble-container {
    padding: 10;
}

Image.bubble-from-me-picture,
Image.bubble-from-other-picture {
    height: 35;
    width: 35;
    border-radius: 17;
    vertical-align: bottom;
}

Image.bubble-from-other-picture {
    horizontal-align: right;
    margin-right: 17;
}

Image.bubble-from-me-picture {
    horizontal-align: left;
    margin-left: 17;
}

Label.send-button {
    vertical-align: middle;
    margin-left: 5;
    color: $send-button-color;
}

GridLayout.message-box {
    padding: 10;
}*/



/* Newly added for caledar*/
.textcenter{
    text-align: center;
}

StackLayout.today-date {
    margin: 5px;
    font-size: 16px;
    text-align: center;
}

.calendar-schedule {
}


.calendar-schedule .schedule-icon,
.calendar-reminder .reminder-icon,
.calendar-message .message-icon {
    margin-right: 10px;
    margin-left: 10px;
}
.calendar-schedule .item,
.calendar-reminder .item,
.calendar-message .item  {
    padding: 6px;
    font-size: 12px
}

.calendar-schedule .item .event{
    margin-left: 20px;
}

.calendar-reminder .item {
    font-style: italic;
}


.calendar-message .avatar-icon{
    padding: 8px;
    display: inline-block;
    box-shadow: 0px 0px 2px #2b78e4;
    border-color: #2b78e4;
    border-width: 1;
    /*border-radius: 5;*/
    border-radius: 30%;
    line-height: 20px;
}
.calendar-message .item .kid-name{
    font-weight: bold;
    font-size: 13px;
}
.calendar-message .item .relation-name{
    font-size: 11px;
    font-style: italic;
    margin-left: 5px;
    margin-top: 1px;
}

